<resources>
    <string name="app_name">Swyftr</string>
    
    <!--nav drawer names -->
    <string name="nav_active_deliveries">Active Deliveries</string>
    <string name="nav_delivery_history">Delivery History</string>
    <string name="nav_invite_friends">Invite Friends</string>
    <string name="nav_schedule_basket">Scheduled Basket</string>
    <string name="nav_profile_settings">Profile Settings</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Active Deliveries</item>
        <item>Delivery History</item>
        <item>Invite Friends</item>
        <item>Scheduled Basket</item>
        <item>Profile Settings</item>
        <item>Logout</item>
    </string-array>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="signup_text">Need an Account? Sign up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    
    <string name="reset_code_message">Password reset code will be sent to your email account</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset My Password</string>
    <string name="back_login">Back To Login</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign Up</string>


    <string name="full_name">Full Name</string>
    <string name="fixed_address">Fixed Address</string>
    <string name="swyftdress">Swyftdress Name</string>
    <string name="address">Address</string>
    
    <string name="card_number">Card Number</string>
    <string name="exp_date">EXP</string>
    <string name="cvv_code">CVV</string>
    <string name="card_holder">Card Holder</string>
    <string name="zip_code">Zip Code</string>
    <string name="street_address">Street Address</string>

    <string name="no_network_error">No internet connection.Please connect to proceed</string>

    <string name="facebook_app_id">189229754894006</string>

</resources>
