<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:src="@drawable/app_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.1"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/txtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:background="@drawable/username_background"
                android:paddingLeft="@dimen/activity_horizontal_margin_xlarge"
                android:hint="@string/email_address"/>

            <EditText
                android:id="@+id/txtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:background="@drawable/username_background"
                android:paddingLeft="@dimen/activity_horizontal_margin_xlarge"
                android:hint="@string/mobile_no"
                android:maxLength="10"/>

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/username_background"
                android:paddingLeft="@dimen/activity_horizontal_margin_xlarge"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <EditText
                android:id="@+id/txtRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/username_background"
                android:paddingLeft="@dimen/activity_horizontal_margin_xlarge"
                android:inputType="textPassword"
                android:hint="@string/repeat_password"/>
            
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@style/AppButton"
                android:text="@string/sign_up"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/back_login"
            android:gravity="center"
            android:textSize="@dimen/font_large"
            android:textColor="@android:color/white"/>




    </LinearLayout>


</RelativeLayout>
