<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/nav_header_container"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingTop="@dimen/space_large"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/side_menu">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/empty_user"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:paddingBottom="@dimen/nav_header_vertical_spacing"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_xlarge"
            android:gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/txtFullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/tab_bar_border"
                android:padding="@dimen/space_normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/full_name"/>

            <EditText
                android:id="@+id/txtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:background="@drawable/tab_bar_border"
                android:padding="@dimen/space_normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/email_address"/>

            <EditText
                android:id="@+id/txtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:background="@drawable/tab_bar_border"
                android:maxLength="10"
                android:padding="@dimen/space_normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/mobile_no"/>

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/tab_bar_border"
                android:padding="@dimen/space_normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/fixed_address"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="Add your swyftdresses"
                android:textSize="@dimen/font_large"/>

            <EditText
                android:id="@+id/txtSwyftName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:background="@drawable/tab_bar_border"
                android:padding="@dimen/space_normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/swyftdress"/>

            <EditText
                android:id="@+id/txtSwyftAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/tab_bar_border"
                android:padding="@dimen/space_normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/background_image"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/space_large"
                android:paddingRight="@dimen/space_large">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    style="@style/AppButtonHollow"
                    android:textColor="@color/colorAccent"
                    android:text="SAVE"/>



            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>